--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,9 +35,7 @@ jobs:
       # 安装依赖
       # Install dependencies
       - name: Install Dependencies
-        run: 
-            corepack enable
-            pnpm install  
+        run: pnpm install  
 
       # 运行构建脚本
       # Run the build script
