--- a/docs/.obsidian/app.json
+++ b/docs/.obsidian/app.json
@@ -1,4 +1,8 @@
 {
   "attachmentFolderPath": "public",
-  "newFileLocation": "current"
+  "newFileLocation": "current",
+  "newLinkFormat": "shortest",
+  "useMarkdownLinks": true,
+  "showUnsupportedFiles": true,
+  "alwaysUpdateLinks": true
 }
