--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "vitepress": "^1.4.1",
-    "vitepress-auto-sidebar-plugin": "^0.2.4"
+    "vitepress-auto-sidebar-plugin": "^0.2.4",
+    "vitepress-plugin-group-icons": "^1.3.0"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
