--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "devDependencies": {
     "@nolebase/markdown-it-bi-directional-links": "^2.6.1",
-    "@nolebase/vitepress-plugin-git-changelog": "^2.6.1",
     "@nolebase/vitepress-plugin-inline-link-preview": "^2.6.1",
+    "markdown-it": "link:@nolebase/markdown-it-bi-directional-links/markdown-it",
     "vitepress": "^1.4.1",
     "vitepress-auto-sidebar-plugin": "^0.2.4",
     "vitepress-plugin-group-icons": "^1.3.0"
