--- a/docs/.obsidian/app.json
+++ b/docs/.obsidian/app.json
@@ -15,5 +15,6 @@
   "readableLineLength": true,
   "showRibbon": true,
   "showInlineTitle": true,
-  "trashOption": "local"
+  "trashOption": "local",
+  "strictLineBreaks": true
 }
