--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.18",
-    "vuepress": "2.0.0-rc.18",
-    "vuepress-theme-plume": "1.0.0-rc.116",
     "http-server": "^14.1.1",
-    "vue": "^3.5.12",
     "sass-embedded": "^1.80.6",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vue": "^3.5.12",
+    "vuepress": "2.0.0-rc.18",
+    "vuepress-theme-plume": "1.0.0-rc.116"
+  },
+  "dependencies": {
+    "mermaid": "^11.4.0"
   }
 }
