--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "vp-update": "pnpm dlx vp-update"
   },
   "devDependencies": {
+    "@luckrya/markdown-it-link-to-card": "^0.3.3",
     "@vuepress/bundler-vite": "2.0.0-rc.18",
     "http-server": "^14.1.1",
     "sass-embedded": "^1.81.0",
     "typescript": "^5.7.2",
     "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.18",
+    "vuepress-plugin-md-enhance": "2.0.0-rc.59",
     "vuepress-theme-plume": "1.0.0-rc.118"
   },
   "dependencies": {
