--- a/docs/.obsidian/appearance.json
+++ b/docs/.obsidian/appearance.json
@@ -1,7 +1,8 @@
 {
-  "theme": "obsidian",
+  "theme": "moonstone",
   "cssTheme": "Border",
   "baseFontSize": 16,
   "showViewHeader": true,
-  "nativeMenus": false
+  "nativeMenus": false,
+  "showRibbon": true
 }
